--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
 [tool.poetry]
 name = "all_purpose_set"
-version = "0.1.6"
+version = "0.1.7"
 description = "A set that works with both hashable and non-hashable elements"
 authors = ["Philip Olson <philip.olson@pm.me>"]
 readme = "README.md"
 repository = "https://github.com/olsonpm/py_all-purpose-set"
-include = ["license.txt"]
+include = [
+  "all_purpose_set/license.txt",
+  "all_purpose_set/top_level.txt",
+]
 
 [tool.poetry.dependencies]
 python = "^3.7"
